# joe

./: .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.md.bak  CONTRIBUTING.md  LICENSE  README.md  [SOF] bezier.py  desktop.ini  new_xto.jsx  new_xto.jsx.bak  other.jsx  test.jsx  test0.jsx  test1.jsx  test2.jsx  test3.jsx  test4.jsx  test5.jsx
aecodebox/: codebox.jsx
aecontroller/: controller.jsx
aelatex/: latex.jsx
banks/: expressions.js  shape.json
commandopen/: open.py  programs.json
compiler/: Cargo.toml  main.rs  other.jsx  test.jsx  tokenizer.jsx
concepts/: $add_prototyping.jsx  JSONO.jsx  analyzer.jsx  codebox.jsx  controller.jsx  explode.jsx  mathScript.jsx  neuron.jsx  obscure.jsx
docs/: ScriptUI_Button_Docs.jsx  infra.md  pyjsx-README.md
etc/: $colorPicker.jsx  $gimmePropPath.jsx  $pylexser.jsx  $scanRefs.jsx  $stringify.jsx  $ui snippets.jsx  $ui_blocks.jsx  UI_State_Management.jsx  aesys.dll.jsx  cppCode.cpp
jsx/: $$.jsx  $app.jsx  $arguments.jsx  $array.jsx  $avlayer.jsx  $clipboard.jsx  $collection.jsx  $colorPicker.jsx  $compitem.jsx  $file.jsx  $fstring.jsx  $function.jsx  $http.jsx  $include.jsx  $itemcollection.jsx  $json.jsx  $layercollection.jsx  $logger.jsx  $math.jsx  $misc.jsx  $misk.jsx  $object.jsx  $propertygroup.jsx  $pyjsx.jsx  $python.jsx  $shapelayer.jsx  $string.jsx  $sys.jsx  $table.jsx  $xester.jsx  ^AECMD.jsx  ^BASIC.jsx  ^MATCH_NAMES.jsx  test.jsx  (+3 more)
xto/pyes/: README.md  setup.cfg  setup.py
xto/pyes/pyes/: __init__.py  __main__.py  file_interface.py  main.py  pyjsx.py  utils.py
xto/pyes/pyjsx.egg-info/: PKG-INFO
(+382 files in other folders)
