[metadata]
name = pyjsx
version = 0.2.3
author = Yahia Boudah
author_email = yahiabouda@hotmail.com
description = Extendscript to Python Bridging
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU

[options]
packages = find:
include_package_data=False
install_requires =
    schema