[metadata]
name = pyjsx
version = attr: pyes._version.__version__
author = Yahia Boudah
author_email = yahiabouda@hotmail.com
description = Extendscript to Python Bridging
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU

[options]
packages = find:
include_package_data=False
install_requires =
    schema

[options.entry_points]
console_scripts =
    pyjsx-run = pyes.__main__:main